# Brats-Caffe-Train

./: CMakeLists.txt  classify.hpp  database.hpp  main.cpp  trainer.cpp
WCaffeTest-Debug/: CMakeCache.txt  Makefile  WCaffeTest.cbp  cmake_install.cmake  trainer
WCaffeTest-Default/: CMakeCache.txt  Makefile  WCaffeTest.cbp  caffe  cmake_install.cmake  main  mnist  trainer
WCaffeTest-Default/network/: solver.prototxt  train.prototxt  trained.caffemodel
